<resources>
    <string name="app_name">Quiz</string>
    <string name="quiz_image_description">Quiz Image</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="QuizActivity">Quiz</string>
    <string name="answer_d">answer d</string>
    <string name="answer_c">answer c</string>
    <string name="answer_b">answer b</string>
    <string name="answer_a">answer a</string>
    <string name="question">question</string>
    <string name="question_ProgressTest">Question 1/10</string>
    <string name="button_back">back</string>
    <string name="title_question">Question</string>
    <string name="dispenserState">nothing to take</string>
    <string name="quiz_result">quiz result</string>
    <string name="button_beginNewQuiz">begin new quiz</string>
    <string name="title_results">Results</string>
    <string name="editText_main">enter number of questions</string>
    <!-- Firebase strings -->
    <string name="btn_authenticate">Authenticate</string>
    <string name="title_activity_fire_base_basic_auth">FireBaseBasicAuth</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="verify_email">Verify</string>
    <string name="reload">Reload</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_account">Create Account</string>
    <string name="auth_failed">Authentication failed</string>
    <!-- Firebase strings end -->
    <string name="ble_search">search candy dispenser</string>
    <string name="ble_search_no_result">no candy dispenser found</string>
    <string name="ble_label_select_device">Select dispenser</string>
    <string name="selectQuestions">Settings</string>
    <string name="time">Time</string>
    <string name="tv_filling_level">Filling level: </string>
    <string name="ble_connected">Successful connected to dispenser</string>
    <string name="current_theft">Attention Content is stolen</string>
    <string name="button_endQuiz">end Quiz</string>
    <string name="toastNoDispenserConnected">No dispenser connected</string>
    <string name="toastAuthFailed">Authentication failed.</string>
    <string name="toastLoggedIn">\"Logged in as: \"</string>
    <string name="timerIsUp">time is up!</string>
    <string name="grapMnM"><![CDATA[grab your m&m]]></string>
    <string name="nothingToTake">nothing to take</string>
    <string name="loginFieldRequired">required</string>
    <string name="loginFieldRequiredEmail">please enter valid email</string>
    <string name="loginFieldPasswordToShort">password too short</string>
</resources>
