<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.mse.quiz.QuizResultActivity">

    <ImageView
        android:id="@+id/leaderboardLogo"
        android:layout_width="318dp"
        android:layout_height="240dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/quiz_image_description"
        app:srcCompat="@drawable/leaderboard" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/leaderboardLogo"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        tools:context=".MainActivity">

        <ListView
            android:id="@+id/listView_highScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/quiz_result" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/button_restartQuiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="5dp"
                android:text="@string/button_beginNewQuiz" />

            <Button
                android:id="@+id/button_endQuiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:text="@string/button_endQuiz" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>