<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.mse.quiz.MainActivity">

    <ImageView
        android:id="@+id/mainLogo"
        android:layout_width="318dp"
        android:layout_height="240dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/quiz_image_description"
        app:srcCompat="@drawable/quiz" />

    <ScrollView
        android:id="@+id/svSelectQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainLogo"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvLabelSelectQuestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectQuestions" />

            <NumberPicker
                android:id="@+id/npQuestionNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants"
                />

            <NumberPicker
                android:id="@+id/npQuestionTopic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants"
                />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_startQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/svSelectQuestion"
        android:layout_centerHorizontal="true"
        android:background="@color/design_default_color_primary"
        android:text="@string/start_quiz"
        android:textColor="@color/white" />

</RelativeLayout>